welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:30: error: not found: value move
	move(4,false)
        ^PatternPicture:33: error: not found: value move
	move(4,true)
        ^PatternPicture:36: error: not found: value move
	move(4,true)
        ^