welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
override def run() {
	avance();
	gauche();
	avance();
	gauche();
	faireCarre64()
}
def faireCarre4(c:Color) {
	setCouleurBrosse(c)
	avance();
	baisseBrosse();
	leveBrosse();
	recule();
	droite();
	recule();
	baisseBrosse();
	leveBrosse();
	avance();
	avance();
}
def faireCarre16() {
	faireCarre4(Color.RED)
	faireCarre4(Color.YELLOW)
	faireCarre4(Color.GREEN)
	faireCarre4(Color.BLUE)
}
def faireCarre64() {
	faireCarre16()
	move(4,false)
	faireCarre16()
	droite();
	move(4,true)
	gauche();
	faireCarre16()
	move(4,true)
	faireCarre16()	
}
